fix align of icons

--- a/src/adapters/github.less
+++ b/src/adapters/github.less
@@ -374,6 +374,7 @@
     position: absolute;
     display: flex;
     flex-flow: row-reverse;
+    align-items: center;
     top: 16px;
     right: 6px;
 
